@startuml
' hide the spot
' hide circle

' avoid problems with angled crows feet
skinparam linetype ortho

' Define only the entities used in this diagram
entity party {}
entity party_classification {}
entity party_contact_mechanism {}
entity party_id {}
entity party_name {}
entity party_relationship {}
entity party_role {}
entity party_type {}
entity party_classification_type {}
entity party_contact_mechanism_purpose_type {}
entity id_type {}
entity name_type {}
entity party_relationship_type {}
entity party_role_type {}

party ||..|{ party_classification
party ||..|{ party_contact_mechanism
party ||..|{ party_id
party ||..|{ party_name
party ||..|{ party_relationship
party ||..|{ party_role
party ||..|{ party_type


party_classification ||..|{ party_classification_type
party_contact_mechanism ||..|{ party_contact_mechanism_purpose_type
party_id ||..|{ id_type
party_name ||..|{ name_type
party_relationship ||..|{ party_relationship_type
party_role ||..|{ party_role_type


@enduml
